test/configCases/errors/generator-generate-error/test.filter.js
const supportsWebAssembly = require("../../../helpers/supportsWebAssembly");

module.exports = function (config) {
	return supportsWebAssembly();
};
